[package]
name        = "mod_use"
version     = "0.2.3"
edition     = "2021"
description = "pub mod xxx; use xxx::*;"
license     = "MIT"
repository  = "https://github.com/George-Miao/mod_use"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
